[tool.poetry]
name = "tv-stuff"
version = "0.1.0"
description = "how high to mount your tv"
authors = ["dsimonds-bot <davesimonds6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
